# graphbound

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  LICENSE  MODULE.bazel  go.mod  go.sum
cmd/: main.go
examples/log/: controller.go  ds.go  main.go  server.go
examples/quotes-api/: .gitignore  BUILD.bazel  MODULE.bazel  go.mod  go.sum  gqlgen.yaml  tools.go
examples/quotes-api/cmd/quotes-api/: config.go  main.go  wire.go
examples/quotes-api/cmd/quotes-graphql-api/: BUILD.bazel  config.go  main.go  wire.go  wire_gen.go
examples/quotes-api/cmd/quotes-rest-api/: BUILD.bazel  main.go  wire.go  wire_gen.go
examples/quotes-api/internal/domain/: BUILD.bazel  quote.go
examples/quotes-api/internal/http/graph/: BUILD.bazel  provider.go  resolver.go  schema.graphqls  schema.resolvers.go
examples/quotes-api/internal/http/graph/model/: BUILD.bazel  models_gen.go
examples/quotes-api/internal/http/rest/: BUILD.bazel  provider.go  quote.go
examples/quotes-api/internal/quote/: BUILD.bazel  provider.go  usecase.go
examples/quotes-api/pkg/yeapi/: BUILD.bazel  client.go  provider.go
pkg/config/: BUILD.bazel  config.go
pkg/ginctx/: BUILD.bazel  ginctx.go  httpsrvplugin.go  srvplugin.go
pkg/health/: BUILD.bazel  health.go  httpsrvplugin.go  srvplugin.go
pkg/httpds/: BUILD.bazel  context.go  datasource.go
pkg/log/: BUILD.bazel  dsplugin.go  gqlext.go  httpdsplugin.go  httpsrvplugin.go  log.go  provider.go  srvplugin.go
pkg/metric/: BUILD.bazel  dsplugin.go  httpdsplugin.go  httpsrvplugin.go  metric.go  srvplugin.go
pkg/plugin/: BUILD.bazel  provider.go
pkg/requestid/: BUILD.bazel  dsplugin.go  httpsrvplugin.go  requestid.go  srvplugin.go
pkg/server/: BUILD.bazel  provider.go  server.go
pkg/shutdown/: BUILD.bazel  log.go  shutdown.go
pkg/trace/: BUILD.bazel  dsplugin.go  httpdsplugin.go  httpsrvplugin.go  srvplugin.go  trace.go
tools/bzl/: wire.bzl
