module(
    name = "com_github_graphbound_graphbound",
    version = "1.0",
)

bazel_dep(name = "rules_go", version = "0.40.1")
bazel_dep(name = "gazelle", version = "0.31.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_99designs_gqlgen",
    "com_github_99designs_gqlgen_contrib",
    "com_github_gin_contrib_requestid",
    "com_github_gin_contrib_zap",
    "com_github_gin_gonic_gin",
    "com_github_google_wire",
    "com_github_hellofresh_health_go_v5",
    "com_github_prometheus_client_golang",
    "com_github_ravilushqa_otelgqlgen",
    "io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace",
    "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_trace",
    "org_uber_go_zap",
)
