module(
    name = "com_github_graphbound_graphbound_examples_quotes_api",
    version = "1.0",
)

bazel_dep(name = "rules_go", version = "0.40.1")
bazel_dep(name = "gazelle", version = "0.31.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_99designs_gqlgen",
    "com_github_gin_gonic_gin",
    "com_github_google_uuid",
    "com_github_google_wire",
    "com_github_graphbound_graphbound",
    "com_github_hellofresh_health_go_v5",
    "com_github_kelseyhightower_envconfig",
    "com_github_vektah_gqlparser_v2",
    "io_opentelemetry_go_otel_sdk",
    "org_uber_go_zap",
)
