load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "ginctx",
    srcs = [
        "ginctx.go",
        "httpsrvplugin.go",
    ],
    importpath = "github.com/graphbound/graphbound/pkg/ginctx",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)
