load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "log",
    srcs = [
        "gqlext.go",
        "httpdsplugin.go",
        "httpsrvplugin.go",
        "log.go",
        "provider.go",
    ],
    importpath = "github.com/graphbound/graphbound/pkg/log",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config",
        "//pkg/ginctx",
        "//pkg/httpds",
        "@com_github_99designs_gqlgen//graphql",
        "@com_github_gin_contrib_zap//:zap",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_wire//:wire",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

alias(
    name = "go_default_library",
    actual = ":log",
    visibility = ["//visibility:public"],
)
