load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "quotes-graphql-api_lib",
    srcs = [
        "config.go",
        "main.go",
    ],
    importpath = "github.com/graphbound/graphbound/examples/quotes-api/cmd/quotes-graphql-api",
    visibility = ["//visibility:private"],
    deps = [
        "//examples/quotes-api/pkg/yeapi",
        "//pkg/config",
        "@com_github_kelseyhightower_envconfig//:envconfig",
    ],
)

go_binary(
    name = "quotes-graphql-api",
    embed = [":quotes-graphql-api_lib"],
    visibility = ["//visibility:public"],
)
