load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "quote",
    srcs = [
        "provider.go",
        "usecase.go",
    ],
    importpath = "github.com/graphbound/graphbound/examples/quotes-api/internal/quote",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/domain",
        "//pkg/yeapi",
        "@com_github_google_wire//:wire",
        "@org_uber_go_zap//:zap",
    ],
)
