load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "yeapi",
    srcs = [
        "client.go",
        "provider.go",
    ],
    importpath = "github.com/graphbound/graphbound/examples/quotes-api/pkg/yeapi",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_wire//:wire",
        "@com_github_graphbound_graphbound//pkg/config:go_default_library",
        "@com_github_graphbound_graphbound//pkg/health:go_default_library",
        "@com_github_graphbound_graphbound//pkg/httpds:go_default_library",
        "@com_github_graphbound_graphbound//pkg/plugin:go_default_library",
        "@com_github_graphbound_graphbound//pkg/trace:go_default_library",
        "@com_github_hellofresh_health_go_v5//:health-go",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@org_uber_go_zap//:zap",
    ],
)
