load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "rest",
    srcs = [
        "provider.go",
        "quote.go",
    ],
    importpath = "github.com/graphbound/graphbound/examples/quotes-api/internal/http/rest",
    visibility = ["//examples/quotes-api:__subpackages__"],
    deps = [
        "//examples/quotes-api/internal/domain",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_google_wire//:wire",
        "@org_uber_go_zap//:zap",
    ],
)
